# Multilingual-RAG

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  lint.yml
data/eval/: golden_dataset.json  results_1783186598.json  results_1783187898.json  results_1783188291.json  results_1783188990.json  results_1783189855.json
docker/: Dockerfile
docs/: architecture.md
docs/adr/: 001-qdrant-over-pinecone.md  002-indicbert-for-cross-lingual.md  003-async-ingestion-pipeline.md
notebooks/: async_exercise.py
src/multilingual_rag/: __init__.py
src/rag_pipeline/: app.py  run.py
src/rag_pipeline/api/: main.py  schemas.py
src/rag_pipeline/embeddings/: model.py  pipeline.py
src/rag_pipeline/evaluation/: harness.py  run_eval.py
src/rag_pipeline/generation/: pipeline.py  prompts.py
src/rag_pipeline/ingestion/: chunker.py  loader.py  pipeline.py  preprocess.py
src/rag_pipeline/retrieval/: pipeline.py  store.py
tests/integration/: test_api.py  test_retrieval.py  test_vector_store.py
tests/unit/: test_chunker.py
