[project]
name = "multilingual-rag"
version = "0.1.0"
description = "Multilingual Indic RAG Pipeline"
readme = "README.md"
authors = [
    { name = "Sourabh Sonker", email = "sourabhsonker17@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "qdrant-client>=1.8.0",
    "httpx>=0.27.0",
    "pypdf>=4.1.0",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=2.5.1",
    "transformers>=4.38.0",
    "ragas>=0.1.0",
    "jinja2>=3.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
