[project]
name = "multilingual-rag"
version = "0.1.0"
description = "Multilingual Indic RAG Pipeline"
readme = "README.md"
authors = [
    { name = "Sourabh Sonker", email = "sourabhsonker17@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "qdrant-client>=1.8.0",
    "httpx>=0.27.0",
    "pypdf>=4.1.0",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=2.5.1",
    "transformers>=4.38.0",
    "ragas>=0.1.21",
    "jinja2>=3.1.0",
    "torch",
    "langchain-groq"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.0",
    "black>=24.2.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.2",
    "types-requests>=2.31.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (import sorting)
    "B",  # flake8-bugbear (common bugs)
    "C4", # flake8-comprehensions
]
ignore = ["E501","F841"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
